# clickhouse-migrator

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS
.github/workflows/: ci.yaml  publish-to-pypi.yaml
dev/: .gitignore  Makefile  config.xml  docker-compose.yaml
migration_lib/: migrate.py
src/clickhouse_migrations/: __init__.py  migrate.py  migrator.py  types.py
src/tests/: test_clickhouse_migration.py
src/tests/migrations/: V1__create_test.sql
tests/: test_clickhouse_migration.py
tests/clickhouse_migrations_2/: V2_create_multiple_tables.json
tests/migrations_mixed/: V1__create_test.sql
tests/migrations_seq/: V1_sequential_dmls.json
