[metadata]
name = clickhouse-migrations
version = attr: clickhouse_migrations.__version__
author = Oleg Strokachuk
author_email = zifter.ai+clickhouse_migrations@gmail.com
home_page = https://github.com/zifter/clickhouse-migrations
description = attr: clickhouse_migrations.__doc__
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
license_file = LICENSE
platform = any
keywords = clickhouse, migrations
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
zip_safe = false
include_package_data = true
python_requires = >= 3.6
package_dir =
    clickhouse_migrations=src/clickhouse_migrations
    tests=src/tests
packages =
    clickhouse_migrations
test_suite = tests
setup_requires =
	setuptools >=30.3.0     # minimal version for `setup.cfg`
install_requires =
    pandas>=0.25.2
    clickhouse-driver>=0.1.2

[bdist_wheel]
universal = true

[check]
metadata = true
strict = true

[sdist]
formats = gztar
